# plaseek

./: .gitignore  README.md  README2.md  README_ja.md  foldseek_TrfA1_IncP-1alpha.tsv  foldseekhit_nodups.fasta  intermediate.tsv  output.txt  pyproject.toml  test_repseek.py
plaseek/: plaseek.py
plaseek/tools/: blastdbcmd.py  foldseek.py  new.py  tblastn.py  utils.py
repseek/: __init__.py  repseek.py
tests/: test_foldseek.py  test_foldseekresults.py  test_plaseek.py  test_tblastn.py
tests/inputfiles/: AF-A0A166M635-F1-model_v4.m8  AF-P07676-F1-model_v4.tsv  Known_Rep_new.fasta  foldseek_TrfA1_IncP-1alpha.tsv  rk2_TrfA1.fasta  rk2_TrfA2.fasta  test_Known_Rep.fasta  test_intermediate.tsv  test_output.txt
tests/validation/: IncP-2_lists.txt
