[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "repseek"
description = "Search for plamid replication proteins based on protein structures"
authors = [{ name = "Y.Moriwaki", email = "virgospica93@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
requires-python = ">=3.9"
dependencies = ["absl-py", "biopython", "pandas"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy", "black"]

[project.scripts]
repseek = 'repseek:main'

[tool.rye]
dev-dependencies = [
    "black>=23.12.1",
    "notebook>=7.0.6",
    "pytest>=7.4.4",
    "ipykernel>=6.28.0",
    "ipython>=8.20.0",
]

[tool.rye.managed]
managed = true
