[project]
name = "plaseek"
version = "0.0.4"
description = "Search for plamid replication proteins based on protein structures"
authors = [{ name = "Y.Moriwaki", email = "virgospica93@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
requires-python = ">=3.9"
dependencies = [
    "absl-py",
    "biopython",
    "pandas >= 2.2",
    "requests",
    "pygments >= 2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "notebook>=7.0.6",
    "pytest>=7.4.4",
    "ipykernel>=6.28.0",
    "ipython>=8.20.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
plaseek = 'plaseek.plaseek:main'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["plaseek"]

[tool.pytest.ini_options]
rootdir = "."
minversion = "6.0"
addopts = "-ra -q -p no:warnings -v --color=yes"
testpaths = ["tests"]
